--- a/BasicInformation/とにかく.md
+++ b/BasicInformation/とにかく.md
@@ -538,6 +538,7 @@ RAID5 ブロック  パリティビット 複数台に分散
 ・パリティビットはエラーを検出できるが、エラーの訂正は出来ない。偶数パリティ、奇数パリティのあれね。
 ・ハミング符号はエラーの検出と訂正ができる。
 →だけどRAID2では生かしきれない模様。
+ハミング符号はXOR、パリティは1,0のビットで判断する。
 
 ### コメント
 
