--- a/BasicInformation/午前/2週目重点.md
+++ b/BasicInformation/午前/2週目重点.md
@@ -716,6 +716,8 @@ D 1110 1110 0000(224) ~ 1110 1111(239)
 主記憶のアクセス時間60ナノ秒，キャッシュメモリのアクセス時間10ナノ秒のシステムがある。キャッシュメモリを介して主記憶にアクセスする場合の実効アクセス時間が15ナノ秒であるとき，キャッシュメモリのヒット率は幾らか。
 →
 これはヒット率の公式を使えばいける。
+主記憶のアクセス時間とキャッシュメモリのアクセス時間はいいとして、実行アクセス時間を イコール側に持っていく点が肝だな。
+公式は知ってるけど、それだけだとこの数字をどうしていいかちょっと迷うから。
 
 15 = (1-n)60 + 10n
 
@@ -1963,8 +1965,8 @@ OSがCPUやシステム資源を管理し、CPU使用時間や優先度などに
 この問題の場合、
 
 固定費＝200＋300＝500
-　変動費＝100＋40＝140
-　変動費率＝140÷700＝0.2
+変動費＝100＋40＝140
+変動費率＝140÷700＝0.2
 
 という値になり、そのまま公式に当てはめると、
 
@@ -1995,26 +1997,1430 @@ OSがCPUやシステム資源を管理し、CPU使用時間や優先度などに
 この売上高が損益分岐点というわけだ。  
 
 
+---
+
+2021/10/15 Fri
+
+**平成28年春期　問26**
+関係モデルとその実装である関係データベースの対応に関する記述のうち，適切なものはどれか。
+
+→
+多分、超基本的な問題。だけどまた間違えた。
+前回は左と右の順序付けってやった気がする。
+今回はタプルも行も重複しないにしたけど、場合によっては普通にするわな。
+
+リレーショナルはテーブルに対応付けられるが正解です。
+リレーションはカラムだと思ってましたが、それはキーで合って、結合条件に過ぎない。
+その結合条件を使ってテーブルどうしをくっつけるのだから、当たり前といえば当たり前何ですけどねぇ。
+
+タプルは「組」という意味らしいですよ。
+
+てか、関係モデルってなにさね。
+→
+関係モデルは、データの関係を数学的な集合論と述語論によって表現するモデルで、関係データベースは関係モデルをコンピュータ上に実装したものです。それぞれの要素は次のように対応しています。
+
+ほ―ん。数学の集合論を落とし込んだのが関係データベース何だ。
+まぁでも、数学なんて小難しい概念は知らなくても、みんな普通に使えてるよね。
+
+関係はテーブル(表)
+属性はカラム(列)につく
+タプルはレコード(行)。
+定義域は文字列型、整数型などのデータ型。
 
 
 
-思ったが、ここにまとめる寄りもそれぞれのプロジェクトにまとめるのがいいのでは？  
-いや、どうせメモ帳なのだからこれくらいいいじゃないか。  
-どんなにまとめたところで、頭でわかってないと意味のないことだ。  
-後は、グダグダ書くくらいなら頭の中でグダグダいうべきだ。  
+**平成28年秋期　問79**
+プログラム開発において，法人の発意に基づく法人名義の著作物について，著作権法で規定されているものはどれか。
 
-基本情報って基本的に選択肢は2つに絞れる程度には簡単なので、時間もないことだし、全部は覚えないでいいでしょう。
-どちらか一方で十分。
+→
+あれ？まじか。
+ある人が会社に居ました。
+プログラム開発しました。著作権は誰のものですか？
+「個人に帰属するけど、法人は使用できる」がもっともぽかったけど、特段の取り決めがない場合、法人に属するんですね。
+→
+著作権は通常、その著作物の作成者に与えられます。
+しかし著作権法では、契約や勤務規則で特段の取り決めが無い限り、法人の従業員が職務上作成した著作物について、その著作者を法人とするとともに、著作権がその法人に帰属することが定められています。
 
-一回間違えた奴だから印象に残っているかもしれないが、そうなると悩んで正解してしまったやつが本当に大丈夫か心配になってくるな。
-
-
-
-
-
-
-
-
+【著作権法第15条 (職務上作成する著作物の著作者)】
+「法人その他使用者（以下この条において「法人等」という。）の発意に基づきその法人等の業務に従事する者が職務上作成する著作物（プログラムの著作物を除く。）で、その法人等が自己の著作の名義の下に公表するものの著作者は、その作成の時における契約、勤務規則その他に別段の定めがない限り、その法人等とする。」
+「法人等の発意に基づきその法人等の業務に従事する者が職務上作成するプログラムの著作物の著作者は、その作成の時における契約、勤務規則その他に別段の定めがない限り、その法人等とする。」
 
 
+ここは、派遣元と派遣先の場合の著作権の話もあった気がするな。
+その場合の特段の取り決めがない場合、は派遣元企業に帰属しちゃうからちゃんと明文化しないとダメだよってはなしだっけかな？
 
+**平成20年春期 午前問79**
+特に取決めのない場合，労働者派遣契約によって派遣された派遣労働者が，派遣先企業の指示の下に開発したプログラムの著作権の帰属先はどれか。
+→
+見つけた。
+逆だった。派遣先企業に帰属するらしい。
+俺は著作権の問題に疎いみたいだな。
+→
+派遣契約では、派遣先企業の指揮命令の下に業務を行うので、派遣元企業の従業員が開発した著作物であっても著作権は派遣先企業に帰属します。
+(※また会社の業務活動にて生産したプログラムの著作権は、個人ではなく会社に帰属します。)
+
+請負契約ではこれとは異なり、請負業者が開発した著作物の著作権は請負業者(委託先企業)に帰属します。
+
+
+
+
+**平成27年秋期　問27**
+関係"注文記録"の属性間に①～⑥の関数従属性があり，それに基づいて第3正規形まで正規化を行って，"商品"，"顧客"，"注文"，"注文明細"の各関係に分解した。関係"注文明細"として，適切なものはどれか。ここで，{X，Y} は，属性XとYの組みを表し，X→Yは，XがYを関数的に決定することを表す。また，実線の下線は主キーを表す。
+
+注文記録（注文番号，注文日，顧客番号，顧客名，商品番号，商品名，数量，販売単価）
+
+〔関係従属性〕
+注文番号 → 注文日
+注文番号 → 顧客番号
+顧客番号 → 顧客名
+{注文番号，商品番号} → 数量
+{注文番号，商品番号} → 販売単価
+商品番号 → 商品名
+
+→
+最近、正規化は攻略しつつあるからな。
+普通に考えて、2つのキーで決める要素が明細に行くと考えれば、注文番号、商品番号、数量、単価しか内容に思えるんだよなぁー。
+まぁ、実際それで合っていたが、こういう時の解説は本当にややこしい。
+
+→
+設問で示されている属性同士の従属関係を整理すると次のようになります。
+
+この関係を見ると"注文番号"と"商品番号"の両方が決まることで全ての属性が一意に定まるため、主キーはこの2つを組み合わせた複合キーとわかります。また、この時点で全ての項目が単一値（繰り返し項目がない）ですので第1正規化までは完了しています。続けて第2、第3正規化を行います。
+
+第2正規化では、複合主キーの部分キーによって一意に定まる属性を別表に移します。設問のリレーションでは以下の4つがこれに該当します。
+①注文番号→注文日
+②注文番号→顧客番号
+③顧客番号→顧客名（推移律※により、注文番号→顧客名）
+⑥商品番号→商品名
+この3つの関係を別表に分離すると以下の3つの表ができます。
+
+最後に第3正規化を行います。第3正規化では、主キー以外の属性によって一意に定まる属性を別表に移します。第2正規化後の関係では1つがこれに該当します。
+⑤顧客番号→顧客名
+この関係を別表に移すと"商品"、"顧客"、"注文"、"注文明細"の4つの表に正規化されます。
+
+したがって"注文明細"表がもつ属性の組合せは「エ」になります。
+※推移律
+X→Y かつ Y→Z が成立するならば、X→Z が成立する
+
+つまり、第1から第2正規形にする時に出来上がるテーブルは複合主キー以外の主キーで決められるものに分離する事になるのか。
+関数従属性の表から見るに、
+注文番号→注文日
+注文番号→顧客番号
+顧客番号→顧客名
+商品番号→商品名
+
+「注文番号、注文日、顧客番号、顧客名」
+「商品番号、商品名」
+
+で、残ったやつがこれ。
+「注文番号、商品番号、数量、販売単価」
+
+最後に、主キー以外の属性によって一意に決まる属性を別表に移せば正規化完了ってわけ。
+ちょっとわかったかなって感じ。
+まぁ、ほとんど感覚でやってしまいそうな気もするけど、第2正規形は主キーにだけ着目して、分離していくといい感じになることはわかりました。
+
+
+
+**平成27年秋期　問79**
+サイバーセキュリティ基本法の説明はどれか。
+→
+なんかこれ小学生みたいな回答だった気がする。
+全ての国民にセキュリティーは重要ですって広めましょうって回答だったような？
+
+実際そうだった・・・。
+
+→
+サイバーセキュリティ基本法は、日本国におけるサイバーセキュリティに関する施策の推進にあたっての基本理念、及び国及び地方公共団体の責務等を明らかにし、サイバーセキュリティ戦略の策定その他サイバーセキュリティに関する施策の基本となる事項を定めた法律です。
+
+この法律で定められている関係者ごとの責務・努力事項をまとめると以下のようになります。
+
+国民の努力については第九条で次のように言及されています。
+
+「国民は、基本理念にのっとり、サイバーセキュリティの重要性に関する関心と理解を深め、サイバーセキュリティの確保に必要な注意を払うよう努めるものとする」
+
+したがって「ア」が正しい記述です。
+国民に対し，サイバーセキュリティの重要性につき関心と理解を深め，その確保に必要な注意を払うよう努めることを求める規定がある。
+正しい。
+
+サイバーセキュリティに関する国及び情報通信事業者の責務を定めたものであり，地方公共団体や教育研究機関についての言及はない。
+地方公共団体の責務(第五条)や教育研究機関の責務(第八条)にも言及されています。
+
+サイバーセキュリティに関する国及び地方公共団体の責務を定めたものであり，民間事業者が努力すべき事項についての規定はない。
+重要社会基盤事業者(第六条)、サイバー関連事業者及びその他の事業者の責務(第七条)についても言及されています。
+
+地方公共団体を"重要社会基盤事業者"と位置づけ，サイバーセキュリティ関連施策の立案・実施に責任を負うと規定している。
+サイバーセキュリティ関連施策の立案・実施に責任を負うのは国と規定されています。(第四条)
+また"重要社会基盤事業者"とは道路・鉄道・上下水道・送電網・港湾・ダム・通信施設などの「国民生活及び経済活動の基盤であって、その機能が停止し、又は低下した場合に国民生活又は経済活動に多大な影響を及ぼすおそれが生ずるものに関する事業を行う者」と定義されているため「重要社会基盤事業者＝地方公共団体」ではありません。
+
+
+
+
+**平成28年春期　問69**
+図に示すマトリックスを用いたポートフォリオマネジメントによって，事業計画や競争優位性の分析を行う目的はどれか。
+
+→
+花形、金の生る木、負け犬、問題児のあれ。
+というのはわかるのだが、何のために使うポートフォリオなのか？ということだ。
+これは、自分の立場を明らかにしてどうしていけばいいのかを決めるための道具と言えるだろう。
+金の生る木にさせたいのか、花形にしたいのか、負け犬だったらとっとと撤退するに限るし、問題児に投資するのか否かってのを客観的に分析するための手法だと思うけどなー。
+
+→
+ポートフォリオマネジメントは、縦軸と横軸に別々の指標を設定したマトリックス図を四つの象限に区分し、製品や事業、あるいはプロジェクトの位置付けを分析して資源配分を検討する手法です。
+製品に対するプロダクトポートフォリオ分析の場合と同様に、図のポートフォリオ類型は事業ごとの市場における自社の置かれた立場を客観的にとらえるために用いられます。この分析により事業の市場での立場を明らかにし、自社の資源をどの製品に配分していくのが効果的なのかを判断する材料とします。
+
+
+
+**平成28年春期　問9**
+PCのクロック周波数に関する記述のうち，適切なものはどれか。
+→
+でた。クロック周波数 = 性能ではないのは覚えた。  
+今見ると、消去法的に1つしかないような？
+あたった。
+→
+クロック周波数は、1秒間に何回のクロックが発振されるかを表す数値(単位はHz:ヘルツ)でプロセッサの性能指標として使われます。
+一般にコンピュータの機種・製品が同じであればクロック周波数が高いほど処理速度は高くなります。
+
+CPUのクロック周波数と，主記憶を接続するシステムバスのクロック周波数は同一でなくてもよい。
+正しい。
+CPUと主記憶、拡張ボードを接続するシステムバスのクロック周波数は「ベースクロック」「外部クロック」などと呼ばれます。
+クロック周波数とベースクロックは同じである必要はありません。
+
+
+
+**平成28年春期　問75**
+企業経営の透明性を確保するために，企業は誰のために経営を行っているか，トップマネジメントの構造はどうなっているか，組織内部に自浄能力をもっているかなどの視点で，企業活動を監督・監視する仕組みはどれか。
+→
+コーポレートガバナンス。
+ガバナンスってどういう意味だっけ。
+どうでもいいけど、コルトガバメントは政府が採用した銃だからガバメントってついてるって話だった。
+それと似たようなニュアンスだろうか。
+
+governance : 統治
+
+→
+コーポレートガバナンス(corporate governance)は「企業統治」とも訳され、企業の経営について利害関係者が監視・規律すること。目的は主に2つあり「企業の収益力の強化」と「企業の不祥事を防ぐ」ことです。
+
+コアコンピタンス
+コアコンピタンスは、長年の企業活動により蓄積された他社と差別化できる企業独自のノウハウや技術のことです。
+
+コーポレートアイデンティティ
+コーポレートアイデンティティは、企業の特徴や個性を分かりやすい形であらゆる手段で提示することで、顧客と共有し企業の存在価値を高めていく企業戦略です。
+
+ステークホルダアナリシス
+ステークホルダアナリシスは、システム開発で上流工程における要求分析の精度と質を向上させるために行われるステークホルダに対する分析手法です。提供するシステムを利用する人だけでなく開発者などシステムに関わる幅広い人を対象とし、分析結果から顧客の生の声(VoC…Voice of Customers)の中で優先度の高いものを判断します。
+
+
+
+**平成27年春期　問72**
+電子自治体において，G to Bに該当するものはどれか。
+→
+Goverment to Business
+政府と企業。
+軍事企業との取引で多い印象。レイセオンとか得意先はもっぱら政府でしょう。
+
+→
+e-ビジネスにおける●to□に使用されるアルファベットは3種類あり、次のようなそれぞれ意味を持っています。
+G(Government) = 政府・行政
+B(Business) = 企業
+C(Citizen、またはConsumer)=個人
+G to Bは、Government to Businessになりますから、自治体（行政）が企業に部品や資材の発注を行う取引である「イ」が正解となります。
+
+
+
+**平成27年秋期　問43**
+ワームの検知方式の一つとして，検査対象のファイルからSHA-256を使ってハッシュ値を求め，既知のワーム検体ファイルのハッシュ値のデータベースと照合することによって，検知できるものはどれか。
+
+→
+うーん。わからんぞ。
+これは知ってないとわからない。
+確かワームで自己増殖して拡散するタイプのウイルスだったような気がする。
+
+トロイの木馬は一見正常に見えるけど、実は裏で悪い事するウイルスだった気がするな。
+潜伏期間があって、時間が立ったら発祥して、PCの情報をどこかに送信したりするタイプ。
+
+それがわかったうえで、ワームをハッシュコードから検索することで、何がわかるのか？
+
+思うに、完全に同一のワームを求めるより、似たようなワームが引っかかるかどうかが重要な気がするので、
+特徴のあるコード列が同じワームにしてみますか。
+
+完全に裏目にでた。
+正解は同一のワームだった。
+
+→
+
+設問のウイルス検出方式は「コンペア法」と呼ばれ、検査対象ファイルのハッシュ値と、安全な場所に保管してあるその対象の原本のハッシュ値を比較して、もし異なっていればウイルスとして判断します。
+
+ウイルス検体のハッシュの生成に使用されるハッシュ関数は、任意の長さの入力データに対して固定長のビット列(ハッシュ値，メッセージダイジェスト)を返す関数で、次のような特徴を持っています。
+・入力データが同じであれば、常に同じメッセージダイジェストが生成される。
+・入力データが少しでも異なっていれば生成されるメッセージダイジェストは大きく異なったものになる。
+・メッセージダイジェストから元の入力データを再現することが困難である。
+・異なる入力データから同じメッセージダイジェストが生成される可能性が非常に低い。
+これらの特徴から検査対象が既知のワーム検体ファイルと同一であればハッシュ値が同じになりウイルスと判定されますが、
+それ以外のケースではハッシュ値が異なったものになるため検出することは困難になります。
+
+えーと、つまり、ワームに動いてもらって、結果が同じだったら、同じワームの仕業だろうと判定するわけか。
+少しでもハッシュ値が違ったら、あー違うわってなるだけか。
+でも、ワームのデータベースって何十万とあるだろうから、その中から同じハッシュを探すと考えれば、「あ、こいつだ」ってはなるか。
+なら、同一ワームを検出する方法として話は分かるな。
+
+
+
+**平成26年秋期　問29**
+データベースのアクセス効率を低下させないために，定期的に実施する処理はどれか。
+→
+あー、これね。
+ダンプだった気がするけど、ダンプの意味を覚えないとね。
+ロールバックとバックアップは違う。
+再編成が一番怪しいけど、単語の意味がわからない。
+
+再編成だったわ。多分、前も同じこと考えて間違ったと思う。
+→
+データベースの処理効率は、レコードの追加や削除の繰り返しによるガーベジの増加や、同じレコードが非連続の場所に格納されることによって徐々に低下していきます。
+このような状態を改善するために定期的に行われるのが再編成で、低下した処理効率を回復させることができます。
+ハードディスクにおけるディスクデフラグと同様のイメージで考えるとわかりやすいと思います。
+
+再編成
+正しい。
+
+データベースダンプ
+データベースダンプは、データベースの内容をファイルに書き出して保存することです。
+
+→
+うん。データベースダンプを知っていれば普通に解ける問題だったな。
+でもって、デフラグと同じものって昔覚えたはずだが・・。
+
+ダンプファイル 【dump file】 .dmpファイル / dmpファイル
+ダンプファイルとは、コンピュータのメインメモリ（RAM）やレジスタなどのある瞬間の内容を、ストレージ（外部記憶装置）上のファイルに丸ごと写し取ったもの。
+
+データベースのダンプ
+データベース管理システム（DBMS）では、バックアップやシステムの移転などのためにある瞬間のデータベースの内容を丸ごと複製したファイルをダンプファイルという。
+
+・dump
+(…に)投げ捨てる、どさりと下ろす、投棄する、(…を)(無責任に)放り出す、やっかい払いする、(外国市場へ)投げ売りする、ダンピングする、転嫁する、(…を)打ち出す
+
+となるとダンプカーってまんまその意味なんだな。
+
+
+
+**平成26年秋期　問17**
+2台のCPUからなるシステムがあり，使用中でないCPUは実行要求のあったタスクに割り当てられるようになっている。このシステムで，二つのタスクA，Bを実行する際，それらのタスクは共通の資源Rを排他的に使用する。それぞれのタスクA，BのCPU使用時間，資源Rの使用時間と実行順序は図に示すとおりである。二つのタスクの実行を同時に開始した場合，二つのタスクの処理が完了するまでの時間は何ミリ秒か。ここで，タスクA，Bを開始した時点では，CPU，資源Rともに空いているものとする。
+
+→
+
+CPUの使用時間に関して明文化されていないので、同時に使えるものとして考えるか？
+
+Aが先に資源Rを専有。
+その間、Bは資源Rを使うことが出来ないので待ち時間が発生する。
+その後はとんとん拍子でCPUを使えるので、その線で考える。
+
+10 + 50 (40含む + 20待ち) + 50ミリ(この間AはCPUなのでAは10ミリ)
+Aは120ミリで終わる
+Bは待ち時間20ミリを追加して考えればいいのではないか？
+
+当たった。やったー。
+
+→
+
+この問題のポイントは、二つのタスクは「共通の資源Rを排他的に使用する」ということです。
+
+排他的ということはひとつのタスクが資源Rを使用している場合、もう一方のタスクは使用できずに待ち状態になります。CPUは2つ用意されているので、各タスクに占有的に割り当てることでCPU処理待ちはしないため、資源Rの使用状態にさえ気を付ければ解ける問題です。
+
+資源Rが最初に割り当てられるのは、先にCPU処理が終わるタスクAで開始から10ミリ秒後です。その後開始から60ミリ秒後まで資源Rを占有し続けます。
+タスクBは、開始からCPU処理を40ミリ秒に終え、資源Rを要求しますがタスクAが使用中なので、タスクAの使用が終わるまで20ミリ秒待たなければなりません。
+両方のタスクとも待ち時間がなければ、処理は120ミリ秒で終了しますが、資源Rの使用待ちによってタスクBに生じた20ミリ秒の待ち時間だけ全体の終了時間が遅くなります。
+
+したがって二つのタスクが処理完了するまでの時間は、
+
+　120＋20＝140
+
+140ミリ秒が適切となります。
+
+
+
+**平成26年秋期　問4**
+次に示す計算式と逆ポーランド表記法の組合せのうち，適切なものはどれか。
+→
+出た逆ポ。
+基本を思い出せ。 A + Bは AB+になる。
+(A + B) * C は AB+を1つの項とみなす。仮にXとでもするか。
+となれば、同じ要領でやればいい。
+XC*になる。
+でX = AB+なので AB+C*が逆ポ表記になるはず。
+
+確か、左から順に見ていったときに演算子を観測したらその直前の2つを組み合わせれば、式に戻すことが出来るって話でもあった気がする。
+
+あたったー。よかったー。
+
+→
+
+通常の式を、逆ポーランド表記法で表現するための基本は、A＋B(項 演算子 項) を AB＋(項 項 演算子)で表すことです。これと一回使った演算子は2度使わないことに注意して、普通に計算式を解くのと同じ要領で行っていくことで逆ポーランド表記法の式になります。
+
+以下の式では、変換対象をわかりやすくするために変換対象となる左項を青、右項を赤で示しています。
+
+　((a＋b)＊c)－d
+→(ab＋＊c)－d
+→ab＋c＊－d
+→ab＋c＊d－
+異なるため誤りです。
+
+　(a＋(b＊c))－d
+→(a＋bc＊)－d
+→abc＊＋－d
+→abc＊＋d－
+異なるため誤りです。
+
+　(a＋b)＊(c－d)
+→ab＋＊cd－
+→ab＋cd－＊
+異なるため誤りです。
+
+　a＋(b＊(c－d))
+→a＋(b＊cd－)
+→a＋bcd－＊
+→abcd－＊＋
+変換結果が設問の表の式と一致するため適切な組合せです。
+
+
+
+**平成29年春期　問71**
+図は，生産管理システムの手法であるMRP(資材所要量計画)の作業手順である。図中のaに入る，正味所要量計算に必要な情報はどれか。
+→
+正味所要量といえば、この部品を作るのに、Cは何個必要か？という問題のあれだ。
+基本的に必要な数しか揃えない方式だった気がするが、だとすれば、部品構成表と行きたいところではあるが、不足分の計算とある。
+となれば、在庫から引く場合の事も考えられるわけだ。
+
+在庫と部品構成表という二者択一の結果、俺は間違った。
+部品構成表のイメージが抜けなくて、それを選んだが、そっちは1つ前の段階の話だった。
+総所要量を計算する。この時に部品構成表から必要部品点数を洗って、その後に在庫を確認して不足分や余剰分の計算をするという流れだ。
+わかってしまえば当たり前なのだが、当たり前という補償がない状態では、人間は悩むのだ。
+だけど、覚えたぞ。
+
+→
+正味所要量の計算では、総所要量とaの情報をもとに不足分が計算されます。
+**総所要量**とは、生産計画を実行するために要求される全ての資材をまとめた量で、
+**正味所要量**とは、総所要量から在庫や注文残を除いた、実際に手配すべき量を示します。
+正味所要量は、総所要量から在庫等を減じて算出されるので、aの情報は「在庫状況」が適切です
+
+大日程計画→総所要量計算(部品構成表)→正味所要量計画(不足分の計算)(在庫状況)→発注量計画(発注方針)→手配計画(基準日程)→手配指示
+
+
+
+
+**平成26年秋期　問27**
+"売上"表への次の検索処理のうち，B+木インデックスよりもハッシュインデックスを設定した方が適切なものはどれか。ここで，インデックスを設定する列を<>内に示す。
+　売上(伝票番号，売上年月日，商品名，利用者ID，店舗番号，売上金額)
+→
+ハッシュって事は、ある数値からある数値を求めるって事だ。
+となれば、一意に決められるIDが最適だろうと思ったら当たった。
+
+→
+インデックスは、データベースに格納されているデータの取出しや並べ替えを高速で行うための仕組みです。
+
+B+木インデックス
+木構造を使ってデータを管理する方式で、RDBMSで最も一般的に使用されている。節ごとにキー値の範囲とその子要素へのポインタを保持しているので範囲検索をスムーズに行えるほか、次のような性質があります。
+・木構造の深さが一定になっているので、どのようなキー値であっても探索コストが大きく変わらない
+・大量のデータに対する操作であっても、ある程度の速度が期待できる
+・インデックスノードはソートされた状態になっているので整列処理が高速に行える
+
+ハッシュインデックス
+ハッシュ関数を使用してキー値とレコードの格納場所を直接関連つける方式。
+格納場所をキー値から一意に検索できるので、いくつもの階層の節をたどって格納場所にアクセスするB+木インデックスより高速にアクセスが可能。ただし範囲検索やキー値を順番に読み込んで処理を行う用途には使用できない。
+
+これらの特徴から考えると、範囲検索・条件検索にあたる「ア」「イ」「ウ」のケースにハッシュインデックスを設定するのは不適切となり、単一レコードにアクセスを行う「エ」のケースのみがハッシュインデックスを有効に活用できる処理とわかります。
+
+
+
+**令和元年秋期　問47**
+エラー埋込法において，埋め込まれたエラー数をS，埋め込まれたエラーのうち発見されたエラー数をm，埋め込まれたエラーを含まないテスト開始前の潜在エラー数をT，発見された総エラー数をnとしたとき，S，T，m，nの関係を表す式はどれか。
+
+→
+出た出た。
+さて、何だっけかね。
+
+埋め込まれたエラー数 S
+埋め込まれたエラーの内発見されたエラー数 m
+発見された総エラー数 n
+埋め込まれたエラーを含まないテスト開始前の潜在エラー数 T
+
+総エラー数nは埋め込まれたエラー数も含んでの数だろう。
+それから発見されたエラー数を引くのだから、見つけられなかった埋め込まれたエラーが残った状態を表しているはず。
+n - m = まだ埋め込まれているエラーが残ってる数？
+
+m / S = n - m / T
+
+総エラー数的にはS+T
+で、発見された総エラー数がnなので単純に見れば、 n / S+T。
+nの内、mが埋め込まれたエラーの発見数でn-mが潜在エラーを発見した数と導き出せる。
+
+→
+
+潜在エラーのうちテストで発見されたエラー数は、次の式で表すことができます（下のオレンジ色の部分）。
+
+発見された総エラー数 － 埋め込まれたエラーのうち発見されたエラー数
+＝n－m
+
+埋め込まれたエラーの発見率 m/S と潜在エラーの発見率 n-m/T は同程度と考えられるので、m/S = n-m/T の関係式が成り立ちます。
+
+
+
+
+**平成31年春期　問54**
+システムを構成するプログラムの本数とプログラム1本当りのコーディング所要工数が表のとおりであるとき，システムを95日間で開発するには少なくとも何人の要員が必要か。ここで，システムの開発にはコーディングのほかに，設計及びテストの作業が必要であり，それらの作業にはコーディング所要工数の8倍の工数が掛かるものとする。
+→
+あぁ。。この手の問題苦手なんだよな。
+
+入力処理は20本あって、1本1人日って事は20人日。
+出力処理は10本あって、1本3人日って事は30人日。
+計算処理は5本あって、1本9人日って事は45人日。
+この地点での、合計は95人日。
+95日で終わらせるということは1人いれば95日で終わるということだ。
+しかし、そうは問屋が卸さない。
+これの8倍の工数がかかる設計とテストが必要になる。
+
+あれ？そう考えると、単純に8人確保して95日ぶっ飛ばせばいけるように見えない？
+引っ掛け臭いな。もう少し考えよう。
+
+コーディングだけで95人日必要。
+で、設計とテストが必要で、そっちはコーディングの8倍の工数がかかるということは？
+
+760 + 95 + 760で 全体として1615人日必要って事にならないか？
+8 + 1 + 8なので17人必要って言いたいことろだけど選択肢にない。
+また何か勘違いしているか？
+
+うーん、設計及びテストが8倍の工数って書いてある。設計とテストでって一緒くたにされているので、
+分けなくていい。となると9人必要って事じゃない？
+
+やったーあたったー。
+散歩しよ。
+
+→
+
+問題文に「コーディングのほかに、設計やテストの作業が必要であり、それらの作業の遂行にはコーディング所要工数の8倍の工数がかかる」という条件がありますので、実際の所要工数は、
+
+　コーディングに要する工数＋その他の工数
+＝コーディングに要する工数＋(コーディングに要する工数×8)
+
+となります。
+
+つまり実際の所要工数は、プログラム1本当たり
+
+　入力処理 … 1＋1×8＝9人日
+　出力処理 … 3＋3×8＝27人日
+　計算処理 … 9＋9×8＝81人日
+
+であることになります。
+
+これをもとに総工数を求めると、
+
+　(20×9)＋(10×27)＋(5×81)＝855人日
+
+総工数を95日で割ると、
+
+　855人日÷95＝9人
+
+よって、システムを95日間で開発するには少なくとも「9人」の要員が必要となります。
+
+
+
+**平成29年秋期　問2**
+送信側では，ビット列をある生成多項式で割った余りをそのビット列に付加して送信し，受信側では，受信したビット列が同じ生成多項式で割り切れるか否かで誤りの発生を判断する誤り検査方式はどれか。
+
+→
+あー、これね。
+覚えゲーだった気がする。生成多項式って言われたらCRCって覚えろって。
+というか、他の選択肢が全部あり得ないので実質これしかないな。
+
+→
+CRC方式(Cyclic Redundancy Check，巡回冗長検査)は、送信データから生成多項式によって誤り検出用のデータを付加して送信します。受信側では送信側と同じ生成多項式を用いて受信データを除算し、送信されてきた誤り検出用のデータと比較することで誤りの有無を判断することができます。単純なパリティチェックでは検出できない偶数個の誤りやバースト誤りを検出できるという特長があります。
+
+「生成多項式」というキーワードが出たらCRC方式と覚えましょう。この方式は他の誤り検出方式では使用されません。
+
+
+
+**平成30年秋期　問40**
+組織的なインシデント対応体制の構築や運用を支援する目的でJPCERT/CCが作成したものはどれか。
+→
+組織、インシデント対応。
+この地点で内容的にはCSIRT。
+他の奴は全部違うな。
+内部不正ではないし、証拠保全ガイドラインって何だ。ISMSは有り得そうだが、ユーザーズガイドではないだろう。
+
+→
+CSIRTマテリアルは、組織的なインシデント対応体制である「組織内CSIRT」の構築を支援する目的で作成されたガイドラインです。構想フェーズ、構築フェーズ、運用フェースの3部構成になっていて、ITセキュリティに対応するための情報およびノウハウが提示されています。CSIRTマテリアルは、JPCERT/CCのWebサイトで閲覧可能です。
+
+CSIRTマテリアル
+正しい。
+
+ISMSユーザーズガイド
+ISMSユーザーズガイドは、ISMS認証基準(JIS Q 27001:2014)の要求事項について一定の範囲でその意味するところを説明しているガイドです。JIPDECによって作成されています。
+
+証拠保全ガイドライン
+証拠保全ガイドラインは、電磁的証拠の保全手続きの参考として、様々な事案について広く利用できるように策定された指針です。デジタル・フォレンジック研究会によって作成されています。
+
+組織における内部不正防止ガイドライン
+組織における内部不正防止ガイドラインは、組織が管理する情報と情報システムに対する内部不正の防止、および不正行為発生時の早期発見と拡大防止のための体制の整備を推進するための指針です。IPAによって作成されています。
+
+
+
+**平成29年秋期　問43**
+リスクアセスメントを構成するプロセスの組合せはどれか。
+→
+あー。これか。
+どれも有り得そうで困るパターンの奴だ。
+まず、リスクは特定しないといけないはず。
+それから分析して評価するって流れが自然か。
+評価して受容するって一方向しかない。
+リスクの対応の仕方は8通りもあるのだから、これは違うと思う。
+評価が8つに分類する作業ならなおさら分析から評価の流れでは？
+
+やったぜ。
+→
+
+リスクマネジメントの規格であるJIS Q 31010:2012では、リスクアセスメントを「リスクアセスメントは，リスク特定，リスク分析及びリスク評価の全般的なプロセスである。」と定義しています。
+この定義のように、リスクアセスメントは、リスクを見つけ、発見されたリスクの大きさを評価し、そのリスクが許容できるか否かを決定する一連の活動です。一般的にはリスクマネジメントのうち、「リスクの特定」→「リスク分析」→「リスクの評価」のプロセス群を指します。したがって「イ」が適切な組合せです。
+
+
+
+**令和元年秋期　問8**
+A，C，K，S，Tの順に文字が入力される。スタックを利用して，S，T，A，C，Kという順に文字を出力するために，最小限必要となるスタックは何個か。ここで，どのスタックにおいてもポップ操作が実行されたときには必ず文字を出力する。また，スタック間の文字の移動は行わない。
+→
+あれ？これやらなかったっけか？
+まぁ、もう答え覚えたからいいけど、間違ったときはスタックしたらポップのイメージが出来なくて死んだ記憶がある。
+超基本的な事だけど、これができていなかったから色々落ちてるのだから納得行くだろう。
+まぁ、サービス問題だな。
+
+→
+スタックは、データ追加のときは最後尾にデータを追加し、データ取り出しのときはデータの最後尾から取り出す後入れ先出し(LIFO:Last-in First-out)のデータ構造です。
+スタックでは、データを追加するPUSH命令、データを取り出すPOP命令を使用してデータ操作を行います。
+
+まず、スタック構造の動作を確認する意味を含めて1つの場合で試してみます。※[]の中を各スタックの内容として考えてください。一番右が最後尾のデータです。
+
+push A：[A]
+push C：[A，C]
+push K：[A，C，K]
+push S：[A，C，K，S]
+pop 　：[A，C，K] → Sを出力
+push T：[A，C，K，T]
+pop　 ：[A，C，K] → Tを出力
+pop 　：[A，C，K] → Kを出力 //×
+
+STに続いてAが出力できないので無理です。
+
+次にスタックを2つ用意した場合を考えてみます。
+
+push A：[A]　[]
+push C：[A]　[C]
+push K：[A，K]　[C] または [A]　[C，K] //×
+…
+
+AをCより先にpopするには、CをAとは別のスタックに積む必要があります。その後、Kを積むと、AとCKより先に出力することができなくなってしまうので、目的の順番で出力できません。
+
+スタックを3つ用意すると、CKよりも先に出力したいAを退避させておくことができます。
+
+push A：[A]　[]　[]
+push C：[A]　[C]　[]
+push K：[A]　[C]　[K]
+push S：[A]　[C]　[K，S]
+pop 　：[A]　[C]　[K] → Sを出力
+push T：[A]　[C]　[K，T]
+pop 　：[A]　[C]　[K] → Tを出力
+pop 　：[]　[C]　[K] → Aを出力
+pop 　：[]　[]　[K] → Cを出力
+pop 　：[]　[]　[] → Kを出力
+
+したがって、S，T，A，C，Kという順に文字を出力するためには、最低限スタックが3個必要です。
+
+
+
+**平成30年秋期　問79**
+個人情報保護委員会"個人情報の保護に関する法律についてのガイドライン(通則編)平成28年11月(平成29年3月一部改正)"によれば，個人情報に該当しないものはどれか。
+→
+これは個人が特定できないほどぐじゃぐじゃにされたデータならOKって話だった気がする。
+大体、匿名加工情報って文言があったらそれが正解な気もするなぁ。
+
+→
+個人情報保護法では、個人情報について次のように定義しています。
+
+この法律において「個人情報」とは、生存する個人に関する情報であって、次の各号のいずれかに該当するものをいう。
+・当該情報に含まれる氏名、生年月日その他の記述等により特定の個人を識別することができるもの
+・個人識別符号が含まれるもの
+**匿名加工情報**とは、個人情報を個人情報の区分に応じて定められた措置を講じて特定の個人を識別することができないように加工して得られる個人に関する情報であって、当該個人情報を復元して特定の個人を再識別することができないようにしたものです。 匿名加工情報には、個人情報に関するルールは適用されず、一定の条件の下、本人の同意をとらなくても自由に利活用することができます。これにより、新事業や新サービスの創出や、国民生活の利便性の向上が期待されます。
+
+受付に設置した監視カメラに録画された，本人が判別できる映像データ
+容貌や歩行の際の姿勢及び両腕の動作、歩幅その他の歩行の態様を収めた電子データは個人情報に該当します(個人情報保護法施行令1条1号)。
+
+個人番号の記載がない，社員に交付する源泉徴収票
+源泉徴収票には、本人の住所・氏名、勤務先の名称・住所などが記載されているため個人を特定可能です。よって個人情報に該当します。
+
+指紋認証のための指紋データのバックアップデータ
+指紋、掌紋、静脈の形状を収めた電子データは個人情報に該当します(個人情報保護法施行令1条1号)。
+
+匿名加工情報に加工された利用者アンケート情報
+正しい。匿名加工情報は、本人を特定できないように加工されているため個人情報に該当しません。
+
+
+
+**平成30年春期　問57**
+サーバに接続されたディスクのデータのバックアップに関する記述として，最も適切なものはどれか。
+→
+技術的な話は一切ない。
+「複数のファイルに分散して格納されているデータは、それぞれのファイルへの一連の更新処理が終了した時点でバックアップする」
+うん。当たり前だな。
+
+→
+情報セキュリティ対策にとって重要なバックアップも、その運用方法や管理方法によっては使いものにならない場合があります。使えないバックアップでは意味がありません。バックアップには幾つかの注意事項があります。
+・業務形態に合わせて定期的に行う
+・目的時点の状態にリストアできる
+・バックアップ媒体を安全に管理する
+・不要になったら確実に消去する
+
+一定の期間を過ぎて利用頻度が低くなったデータは，現在のディスクから消去するとともに，バックアップしておいたデータも消去する。
+利用頻度が下がっただけで、まだ利用される可能性が残されているので、バックアップ分まで消去してしまうのは不適切です。
+
+システムの本稼働開始日に全てのデータをバックアップし，それ以降は作業時間を短縮するために，更新頻度が高いデータだけをバックアップする。
+更新頻度が低いデータを本稼働開始日の状態にしか戻せず、更新内容が消失してしまうため不適切です。
+
+重要データは，バックアップの媒体を取り違えないように，同一の媒体に上書きでバックアップする。
+故障や誤操作によるデータ消失を避けるため、および、日々の更新の誤りを修正できるようにするために、一定回数のバックアップを世代として管理し複数の媒体に残すことが推奨されます。
+
+複数のファイルに分散して格納されているデータは，それぞれのファイルへの一連の更新処理が終了した時点でバックアップする。
+正しい。更新途中でバックアップを行うとデータの整合性が欠けた状態で保存されてしまうため、バックアップは一連の更新処理が終了した後に行う必要があります。
+
+
+
+**平成30年春期　問6**
+リストを二つの1次元配列で実現する。配列要素 box[i] と next[i] の対がリストの一つの要素に対応し，box[i] に要素の値が入リ，next[i] に次の要素の番号が入る。配列が図の状態の場合，リストの3番目と4番目との間に値が H である要素を挿入したときの next[8] の値はどれか。ここで，next[0] がリストの先頭(1番目)の要素を指し，next[i] の値が0である要素はリストの最後を示し，next[i] の値が空白である要素はリストに連結されていない。
+→
+出た出た。
+頭の中で考えた状態ではまともな答えは出せないという話だ。
+
+とりあえず先頭から始まるので、
+
+1. next[0] = 1 → box[1] = A  
+2. next[1] = 5 → box[5] = E  
+3. next[5] = 3 → box[3] = C
+4. next[3] = 8 → box[8] = H
+5. next[8] = 3 → box[3] = C
+6. next[3] = 7 → box[7] = G
+7. next[7] = 2 → box[2] = B
+
+あ。間違えた。前にも見たから簡単だろうと思って油断してしまった。
+3番目と4番目ってCとGの間の話だ。
+next[0]を1番目と数えるから死ぬんだな。はぁ。
+
+
+
+**令和元年秋期　問4**
+a及びbを定数とする関数 
+ 
+ 及び 
+ 
+ に対して， 
+  
+ はどれか。ここで，a≠0，b≠0，t＞1とする。
+
+→
+ 高校数学の極限の問題。
+ 式をかくのがだるい。
+ 分子のほうが0に収束する速度が早いので0になる。
+ 以上。
+
+
+
+**令和元年秋期　問16**
+2台の処理装置から成るシステムがある。少なくともいずれか一方が正常に動作すればよいときの稼働率と，2台とも正常に動作しなければならないときの稼働率の差は幾らか。ここで，処理装置の稼働率はいずれも0.9とし，処理装置以外の要因は考慮しないものとする。
+→
+直列の場合と並列の場合の稼働率を求めて差を計算すればいいだけ。
+
+直列
+0.9 * 0.9 = 0.81
+
+並列
+1 - (1-0.9)^2 = 1-0.1^2 = 1 - 0.01 = 0.99
+
+0.99 - 0.81 = 0.18
+
+→
+稼働率を R とすると「少なくともいずれか一方が正常に動作すればよいときの稼働率」は並列接続として表せるため、
+
+　1－(1－R)2
+
+「2台とも正常に動作しなければならないときの稼働率」は直接接続として表せるため、
+
+　R2
+
+という公式を用いてシステム全体としての稼働率を計算できます。Rに0.9を代入してそれぞれの稼働率を求め、差を導きます。
+
+[直接接続]
+　0.9×0.9＝0.81
+
+[並列接続]
+　1－(1－0.9)2＝1－0.12＝0.99
+
+[2つの稼働率の差]
+　0.99－0.81＝0.18
+
+
+
+**平成31年春期　問65**
+投資案件において，5年間の投資効果をROI(Return On Investment)で評価した場合，四つの案件a～dのうち，最もROIが高いものはどれか。ここで，割引率は考慮しなくてもよいものとする。
+→
+出た。
+ROI = 儲けた額 / 投資額
+
+何だけど、たくさん数字が並んでいるので、どうしていいかわからない問題だったけど、単純に利益を全部出して投資額で割ればいいだけの問題だったという落ちだった気がする。
+
+→
+また間違えた。まともに計算が出来ない。
+
+
+
+**平成30年春期　問80**
+労働者派遣法に基づく，派遣先企業と労働者との関係(図の太線部分)はどれか。
+→
+派遣元企業と労働者の間には雇用関係。
+派遣元企業と派遣先企業の間には労働者派遣契約関係。
+派遣先企業と労働者の間には指揮命令関係。
+
+残りの請負契約は話が違う。
+請負って業務形態自体、仕事をすること自体が目的なので、今回の話には一切関係がない。
+
+基本的に派遣労働者は派遣先企業の指揮下に入って労働するので、これでよかったはず。
+
+→
+労働者派遣契約に関わる、派遣先事業主、労働者および派遣元事業主の間には下図のような関係があります。
+
+請負契約関係
+労働者派遣契約なので、どの関係にも請負契約関係は生じません。
+
+雇用関係
+雇用関係は、派遣元事業主と労働者の間に生じます。
+
+指揮命令関係
+正しい。派遣先責任者と労働者の間には指揮命令関係が生じます。
+
+労働者派遣契約関係
+労働者派遣契約関係は、派遣元事業主と派遣先事業主の間に生じます。
+
+
+
+**平成31年春期　問23**
+データセンタなどで採用されているサーバ，ネットワーク機器に対する直流給電の利点として，適切なものはどれか。
+→
+これな。めっちゃ調べたでよ。
+家庭に届くまでは交流。使うときは直流。
+交流から直流の変換は容易だが、直流から交流への変換は難しい。
+今回の問題では電力のロスが発生してしまうので、それがないように全部直流でサーバールームまで通すといいよって話だ。
+→
+**直流給電**とは、屋内配線を直流化し、電気製品への電源供給を直流で行うことです。
+
+サーバやネットワーク機器などのコンピュータをはじめ、家庭内のほとんどの電気製品は直流電源で動作しています。一方、家庭やオフィスでは交流電源が供給されています。電気機器は、内部のコンバータで交流を直流に変換するのですが、この変換効率は80%程度しかありません。もしそのまま直流で給電できれば、変換による電力の損失を低減できることになります。
+
+データセンタでは大量の電力を必要とする上、電源の瞬断に備えてUPSが設置されています。UPSは直流で蓄電するので交流と直流の変換回数はさらに多くなります。データセンタが直流給電を採用するのには、無駄な電力ロスを抑える目的があります。
+
+交流から直流への変換，直流から交流への変換で生じる電力損失を低減できる。
+正しい。直流と交流の変換回数を少なくすることで、変換で生じる電力損失を低減できるのが利点です。
+
+受電設備からCPUなどのLSIまで，同じ電圧のまま給電できる。
+CPUやLSIは低電圧で動作するので、降圧が必要になります。
+
+停電の危険がないので，電源バックアップ用のバッテリを不要にできる。
+停電を防止できるわけではありません。
+
+トランスを用いて容易に昇圧，降圧ができる。
+交流ではトランス(変圧器)を使用することで自在に昇圧・降圧できますが、直流の変圧には手間が掛かります。
+
+
+
+**平成30年秋期　問75**
+商品の1日当たりの販売個数の予想確率が表のとおりであるとき，1個当たりの利益を1,000円とすると，利益の期待値が最大になる仕入個数は何個か。ここで，仕入れた日に売れ残った場合，1個当たり300円の廃棄ロスが出るものとする。
+→
+あー、これな。
+これは売れなかったときの金額をどうやって持っていくかってのが重要なのだが、見てしまえば一発でわかるのだが、思い出すのに時間がかかるのがなぁ。
+あ、よく見ると上に販売個数が書いてあるな。
+違う。
+例えば4個しか売れなかった場合、破棄ロスが発生するので、儲けは3700円になる。
+個の確立が0.3だから、これを掛け合わせて行けばいいだけだ。
+これに気が付けないと正解できない。
+
+
+4個売った時は全部売れるので4000円の利益。
+
+5個売れる確立は70%,1個破棄する確立は30%とみなせば？
+5000 0.7 - 3600 * 0.3
+4580
+
+4830
+
+4660
+
+計算電卓でやったけど考え方は合ってたのでOK。
+
+→
+1日の利益は、仕入個数と販売個数がわかれば次の式で求められます。
+
+　1,000円×販売個数－300円×売れ残り個数
+　売れ残り個数＝仕入個数－販売個数
+
+例えば仕入個数が5個、販売個数が4個の場合の利益額は、
+
+　1,000円×4－300円×1＝3,700円
+
+と計算できます。同様に表の各枠の利益額をすべて求めると次のようになります。
+問75解説
+期待値は、確率変数の値(この問題の場合、各々のケースの利益額)とその発生確率を乗じたものの総和で得られるので、2つの表を使って期待値を求めます。
+4
+[仕入個数4個]
+　4,000×1.0＝4,000
+5
+[仕入個数5個]
+　3,700×0.3＋5,000×0.7
+＝1,110＋3,500＝4,610
+6
+[仕入個数6個]
+　3,400×0.3＋4,700×0.3＋6,000×0.4
+＝1,020＋1,410＋2,400＝4,830
+7
+[仕入個数7個]
+　3,100×0.3＋4,400×0.3＋5,700×0.3＋7,000×0.1
+＝930＋1,320＋1,710＋700＝4,660
+上記の結果から利益の期待値が最大になる仕入個数は6個とわかります。
+
+
+
+**平成31年春期　問42**
+不正が発生する際には"不正のトライアングル"の3要素全てが存在すると考えられている。"不正のトライアングル"の構成要素の説明として，適切なものはどれか。
+→
+あれ。これは一番最初のほうでまとめたはずだが・・・。
+まぁいいか。
+
+できる→機会。
+仕方がなかった→正当化。
+やらないといけなかった→動機・プレッシャー。
+
+これです。
+→
+
+不正のトライアングルとは、不正行動は「動機・プレッシャー」「機会」「正当化」の3要素がすべて揃った場合に発生するという理論で、米国の組織犯罪研究者であるドナルド・R・クレッシーにより提唱されました。
+
+動機・プレッシャー
+自己の欲求の達成や問題を解決するためには不正を行うしかないという考えに至った心情のこと。例えば、「過大なノルマ」、「個人的に金銭的問題がある」という心情が、これに当てはまる。
+
+機会
+不正を行おうと思えばいつでもできるような職場環境のこと。例えば、「悪用可能なシステムの不備が存在する」、「チェックする人がいない」「やってもばれない」という職場環境が、これに当てはまる。
+
+正当化
+自分に都合の良い理由をこじつけて、不正を行う時に感じる「良心の呵責（かしゃく）」を乗り越えてしまうこと。例えば、「組織のためであり、悪いことではない」、「自分のせいではない、組織・制度が悪い」「職場で不遇な扱いを受けている」等の身勝手な言い訳（罪悪感からの逃避や責任転嫁）が、これに当てはまる。
+
+
+
+**平成29年秋期　問4**
+図のような黒色で描かれた円に沿って車が走るように，左右の後輪に独立に取り付けられたモータL及びRの回転速度を制御する。センサL及びRは反射型光センサであり，センサが黒色に掛かる比率が大きいと出力値が小さくなり，黒色に掛かる比率が小さいと出力値が大きくなる。この車を円に沿って走行させるためのモータ回転速度の制御方法として，適切なものはどれか。ここで，二つのセンサの出力値が一致するときには，二つのモータの回転速度を初期値に戻すものとする。
+→
+クソ面倒臭い奴。
+頭で考えるだけだと死ぬ奴。
+話は単純。T,F変換が2回あるので、途中で頭が追いつかなくなって死ぬ。
+てか、別にこれの対策をする必要もないんだよなぁ。面倒くさいだけで問題文を読みこめば普通に解ける問題だからなぁ。
+まぁやるけども。
+
+黒大きい → 出力小さい
+黒小さい → 出力大きい
+
+センサL出力値 > センサRの出力値 → Lの黒が小さい、Rの黒が大きい → Lのモーター上げる。Rのモーター下げる。
+センサL出力値 < センサRの出力値 → Lの黒が大きい、Rの黒が小さい → Lのモーター下げる。Rのモーター上げる。
+
+単純に、黒にかからなくなったらずれそうって事で戻ろうとするからモーター強くなるだけでしょ。
+
+
+
+**令和元年秋期　問19**
+バックアップ方式の説明のうち，増分バックアップはどれか。ここで，最初のバックアップでは，全てのファイルのバックアップを取得し，OSが管理しているファイル更新を示す情報はリセットされるものとする。
+→
+これな。
+増分は先っちょ。
+差分は電波の強さみたいな奴。
+
+先っちょ部分だけ取りたいので、取ったら更新情報はリセットします。
+出ないと次の増分したとき前回の奴も取っちゃうから。
+
+→
+主なバックアップ方式として、フルバックアップ、差分バックアップ、増分バックアップの3種類があります。
+フルバックアップ
+毎回、全ファイルのバックアップを行う方式。復旧時間は短くなるが、バックアップに必要な容量が多い分バックアップに要する時間は長い。
+
+差分バックアップ
+定期的にフルバックアップを行い、フルバックアップの間の期間は、フルバックアップ以降に変更のあった全てのファイルを記録する方式。障害発生時にはフルバックアップと直前の差分バックアップ1つを使用して復旧する。
+
+増分バックアップ
+定期的にフルバックアップを行い、フルバックアップの間の期間は、前回の増分バックアップ以降に変更のあったファイルだけを記録する方式。一度にバックアップする量は少なくて済むが、回復にはフルバックアップと複数の増分バックアップが必要になるので、障害発生時の復旧時間は長くなる。
+
+3つの方式の特徴を踏まえると各記述を次のように分類できます。
+
+最初のバックアップの後，ファイル更新を示す情報があるファイルだけをバックアップし，ファイル更新を示す情報は変更しないでそのまま残しておく。
+差分バックアップの説明です。
+
+最初のバックアップの後，ファイル更新を示す情報にかかわらず，全てのファイルをバックアップし，ファイル更新を示す情報はリセットする。
+フルバックアップの説明です。
+
+直前に行ったバックアップの後，ファイル更新を示す情報があるファイルだけをバックアップし，ファイル更新を示す情報はリセットする。
+正しい。増分バックアップの説明です。
+
+直前に行ったバックアップの後，ファイル更新を示す情報にかかわらず，全てのファイルをバックアップし，ファイル更新を示す情報は変更しないでそのまま残しておく。
+フルバックアップの説明です。
+
+
+
+**平成29年春期　問79**
+著作権法によるソフトウェアの保護範囲に関する記述のうち，適切なものはどれか。
+→
+あー、これか。
+作ったプログラムはいいけど、アルゴリズム自体には人権がなかった気がする。
+後プログラミング言語も除外だな。
+OSは保護されるのか。覚えておこう。
+オブジェクトプログラムって何やねんって思う。
+
+オブジェクトプログラム
+ソースコードをコンパイラで機械語に翻訳したプログラム。
+なるほどdllか。
+確かに保護されて然るべきだよな。
+
+→
+アプリケーションプログラムは著作権法によって保護されるが，OSなどの基本プログラムは権利の対価がハードウェアの料金に含まれるので，保護されない。
+OSも著作権法で保護されます。
+
+アルゴリズムやプログラム言語は，著作権法によって保護される。
+著作権法に「著作物に対するこの法律による保護は、その著作物を作成するために用いるプログラム言語、規約及び解法に及ばない。(第10条3項)」と規定されているため、アルゴリズムやプログラム言語は保護対象外です。
+
+アルゴリズムを記述した文書は著作権法で保護されるが，そのアルゴリズムを用いて作成されたプログラムは保護されない。
+アルゴリズムは保護対象外ですが、それを記述した文書およびプログラムは著作権法で保護されます。
+
+ソースプログラムとオブジェクトプログラムの両方とも著作権法によって保護される。
+正しい。プログラムは著作権法における保護対象です。
+
+
+
+**平成31年春期　問53**
+アローダイアグラムの日程計画をもつプロジェクトの，開始から終了までの最少所要日数は何日か。
+→
+これは、最小って言われてるから本当に数字の最小を選びたくなるけど、アローダイアグラムではクリティカルパスが最小になるので、
+逆に一番大きい数字を答えにしないといけないんですねー。
+最低限必要な日数であり、クリティカルパス自体プロジェクトの最小完了日数なので、実質クリティカルパスなんですよ。
+
+→
+アローダイアグラム上の全ての経路を検証して、クリティカルパスとプロジェクト全体の最少所要日数を求めます。この問題では3つの経路が存在します。
+[A→B→E→H→J]
+2＋2＋2＋2＋4＝12日
+[A→C→F→I→J]
+2＋1＋3＋1＋4＝11日
+[A→D→G]
+2＋4＋3＝9日
+最も所要日数の長い経路がクリティカルパスになるので、クリティカルパスは「A→B→E→H→J」、最少所要日数は12日です。
+
+
+
+**平成29年秋期　問8**
+Perlの実行に関する記述のうち，適切なものはどれか。
+→
+WebのCGI用だけどデスクトップアプリもいけるよ。
+インタプリタ型だよ。だからデバッグしたファイルは必要ないよ。
+Windowsでもいけるよ。
+
+
+
+**平成28年秋期　問54**
+開発期間10か月，開発工数200人月のプロジェクトを計画する。次の配分表を前提とすると，ピーク時の要員は何人か。ここで，各工程の開始から終了までの要員数は一定とする。
+→
+また苦手な問題が来た。
+この問題は2つある比率をどのように使えばいいのかってところだな。
+明らかにピークは開発とテストにあるのはわかるのだが、で、何人必要ってのを求める時にさてどうしたものかって感じになる。
+
+まぁ、情報を整理するか。
+
+200人 / 10ヵ月
+20人月
+
+とりあえず、1か月に対する割合は20人だな。
+
+開発・テストは40%取ってるので、4か月って事になるな。
+この間の人月は80人月。
+
+待てよ。
+期間配分40に対して工数配分が40の時は20人で十分ってことになるよな。
+40%なのに42%必要って言ってる。
+105%要求している。
+それに20を掛けると21人になる。
+そういうことでは無かろうか？
+
+くそーーーー。違ったーー。
+あーー。なるほど。引っかかった。
+開発・テストの時しか考えてなかったけど、よく見ると、この比率が大きいのは設計段階だ。
+数字で開発・テストに誘導されてしまった。
+
+因みに、2つの要因があった場合、工数配分は200人月に対して行い、期間配分は10か月に対して適応する。
+それら出てきた答えを組み合わせれば、それぞれで必要な人数がわかるというわけか。
+上下を掛け合わせてって必要は全くない。
+というか、人と時間をいっしょくたにして考えることになるから全然意味が違ってしまう。
+
+→
+
+開発期間10カ月に各工程の期間配分，開発工数200人月に各工程の工数配分を掛け合わせると、
+
+[工程ごとの開発期間]
+要件定義　10か月×20%＝2カ月
+設計　10か月×30%＝3カ月
+開発・テスト　10か月×40%＝4カ月
+システムテスト　10か月×10%＝1カ月
+
+[工程ごとの工数配分]
+要件定義　200人月×16%＝32人月
+設計　200人月×33%＝66人月
+開発・テスト　200人月×42%＝84人月
+システムテスト　200人月×9%＝18人月
+
+あとは工数を開発期間で割れば、1か月ごとの要員数が計算できます。
+要件定義　32人月÷2カ月＝16人
+設計　66人月÷3カ月＝22人
+開発・テスト　84人月÷4カ月＝21人
+システムテスト　18人月÷1カ月＝18人
+以上からピークは設計工程となり、その期間の要員数は22人だとわかります。
+
+
+
+**平成29年春期　問26**
+図のデータモデルを三つの表で実装する。このとき，"A社への売上50,000円を，2017年4月4日に現金勘定に計上した"ことを記録する"移動"表のa，bの適切な組合せはどれか。ここで，モデルの表記にはUMLを用いる。
+→
+簿記の奴。
+データベースとしての問題の意味はないのであまり復習する必要はないのだが・・・。
+まぁ、一応やっておくか。
+
+
+
+**平成27年春期　問13**
+仮想化マシン環境を物理マシン20台で運用しているシステムがある。次の運用条件のとき，物理マシンが最低何台停止すると縮退運転になるか。
+
+〔運用条件〕
+物理マシンが停止すると，そこで稼働していた仮想マシンは他の全ての物理マシンで均等に稼働させ，使用していた資源も同様に配分する。
+物理マシンが20台のときに使用する資源は，全ての物理マシンにおいて70%である。
+1台の物理マシンで使用している資源が90%を超えた場合，システム全体が縮退運転となる。
+(1)～(3)以外の条件は考慮しなくてよい。
+
+→
+これもやってるな。
+全部求めて・・・って思ったけど、後は単純に16で割ったり15で割ったりしたら、どこで90%超えるかわかるな。
+
+20 * 70 = 1400
+1400 / x => 90
+これでもいいし・・・。
+
+
+
+**平成31年春期　問61**
+エンタープライズアーキテクチャを構成するアプリケーションアーキテクチャについて説明したものはどれか。
+→
+覚えたので簡単です。
+アプリなので業務を支援してくれるソフトの事です。
+
+
+
+**平成28年秋期　問61**
+エンタープライズアーキテクチャ(EA)を説明したものはどれか。
+→
+特になし。
+
+
+
+**平成26年春期　問80**
+労働者派遣における派遣元の責任はどれか。
+→
+これこれ。
+休日や残業などの時間の報告だっけか？
+
+いや違うな。
+この2つで迷ったというだけの話だな。
+休日とか休憩時間の管理は相手先と相談しないと成り立たないから、これは派遣元は関係ない気がする。
+やっぱり残業の管理だよな。
+
+うん。そうだった。
+
+→
+
+派遣労働者はまぎれもない労働者であるため、言うまでもなく労働基準法などの各種の労働法が適用されます。
+
+労働基準法第32条には「1週40時間、1日8時間」という法定労働時間が定められていて、これを超える労働を行うためには労使間で36協定を締結し、所轄の労働基準監督署長に届け出を行わなくてはなりません。(労働基準法第36条)
+
+派遣労働者と雇用関係にあるのは「派遣元事業者」ですから、派遣労働者が派遣先で時間外労働を行うためには、労働者派遣契約に時間外労働や休日労働の条項を記載するとともに、派遣元事業者が派遣労働者と36協定を締結し届出を行う必要があります。
+
+したがって派遣元の責任で行われることとして適切なのは「派遣先での時間外労働に関する法令上の届出」です。
+
+
+
+**平成26年秋期　問63**
+スマートグリッドの説明はどれか。
+→
+なんとなく電気系の技術ってイメージのままやってきたけど、やっぱりその通りだった。
+因みにもう一つがHEMSね。
+
+→
+スマートグリッドは、ディジタル機器の通信能力や演算能力を活用することによって電力需要を自律的に調整し、省エネとコスト削減及び信頼性と透明性の向上を目指した新しい電力網システムです。
+
+健康診断結果や投薬情報など，類似した症例に基づく分析を行い，個人ごとに最適な健康アドバイスを提供できるシステム
+人間の専門家の意思決定能力をエミュレートするエキスパートシステムの説明です。
+
+在宅社員やシニアワーカなど，様々な勤務形態で働く労働者の相互のコミュニケーションを可能にし，多様なワークスタイルを支援するシステム
+在宅勤務支援システムの説明です。
+
+自動車に設置された情報機器を用いて，飲食居・娯楽情報などの検索，交通情報の受発信，緊急時の現在位置の通報などが行えるシステム
+カーナビゲーションシステムの説明です。
+
+通信と情報処理技術によって，発電と電力消費を総合的に制御し，再生可能エネルギーの活用，安定的な電力供給，最適な需給調整を図るシステム
+正しい。スマートグリッドの説明です。
+
+
+
+**平成26年秋期　問61**
+"システム管理基準"によれば，"全体最適化"に含まれる作業はどれか。
+
+→
+この問題で50問。
+今日中にいけるかなー。
+でも、だんだん一回間違って見慣れた問題ばかりになってきたから暗記でもいいといえばいいけどねぇ。
+
+全体最適化。あるべきシステムはわかってるけど、それを実現するために必要となる作業とは？
+開発体制の策定。最適化を考えた後の話だよな。なし。
+開発スケジュールも同じだ。
+個別システムのハードウェアの導入スケジュールの策定。これも決めないとどうしようもない案件だ。
+
+情報システム基盤の整備計画の策定。
+一番ぽいといえばぽいが・・・。
+まぁ、基盤っていうくらいだからな。
+実質これしかないような。
+
+うん。合ってた。
+
+→
+
+**システム管理基準**は、情報戦略を立案し、効果的な情報システム投資とリスクを低減するためのコントロールを適切に整備・運用するための事項を経済産業省がとりまとめたものです。
+全287項目で構成されていて、それぞれの項目は「情報戦略」「企画業務」「開発業務」「運用業務」「保守業務」「共通業務」の6つの業務別に分類されています。全体最適化は「情報戦略」の小分類に位置づけられています。
+
+**全体最適化**は、組織体が主体的に経営戦略に沿って効果的な情報システム戦略を立案し、全社的に情報システム開発を推進する体制を整えるために実施される作業で、以下の4つのカテゴリに大別されています。
+・全体最適化の方針・目標(6項目)
+・全体最適化計画の承認(3項目)
+・全体最適化計画の策定(7項目)
+・全体最適化計画の運用(1項目)
+
+委託先を含む開発体制の策定
+企画業務で実施する作業です。
+
+開発スケジュールの策定
+企画業務で実施する作業です。
+
+個別システムのハードウェアの導入スケジュールの策定
+開発業務で実施する作業です。
+
+情報システム基盤の整備計画の策定
+正しい。全体最適化で実施する作業です。
+
+
+
+**平成31年春期　問26**
+関係モデルの属性に関する説明のうち，適切なものはどれか。
+→
+最近、リレーション、表、属性、カラム、タプル、レコード、定義域を復習したばかりなので、これは大丈夫。
+やたら順番に関しては意味がないと言われているのでそれも合わせて覚えれば、この手の問題は大丈夫だろう。
+
+→
+
+関係データベースにおいて、関係は表、属性は列(又はカラム)、組(又はタプル)は行(又はレコード)に対応します。
+関係内の属性の定義域は重複してはならない。
+定義域とは、「属性が取り得る値の集合」のことでデータ型と同じ意味です。ドメインともいいます。
+関係内の2つの属性に整数型などの同じ定義域を設定することを考えれば、定義域の重複は問題にならないとわかります。
+
+関係内の属性の並び順に意味はなく，順番を入れ替えても同じ関係である。
+正しい。属性の並びに意味はありません。また組の並びにも意味はありません。属性・組ともに、並び順が変わっても関係が変わるわけではありません。
+
+関係内の二つ以上の属性に，同じ名前を付けることができる。
+属性につける名前は、関係内で一意でなければなりません。
+
+名前をもたない属性を定義することができる。
+属性には必ず属性名を付けなければなりません。
+
+
+**平成26年秋期　問47**
+多相性を実現するときに，特有のものはどれか。
+→
+多態性のことな。
+なぜこんな変な言い換えをするのか理解に苦しむ。
+
+→
+オーバライド(Override)は、上位クラスで定義されたメソッド(メンバ関数)を、下位クラスの役割に応じて再定義することです。
+オブジェクト指向ではこの方法によって「同じメッセージを送ってもオブジェクトごとに異なる操作が行われる」特性である多相性を実現しています。
+
+
+
+**平成27年春期　問80**
+日本産業標準調査会を説明したものはどれか。
+→
+標準なのでStandard、産業なのでIndustrial、日本なのでJapan
+全部繋げるとJISです。
+
+industrial : 産業
+
+→
+
+日本産業標準調査会(Japanese Industrial Standards Committee：JISC)は、産業標準化法に基づいて設置され、日本産業規格(JIS)の制定・改正・確認・廃止に関する審議などを行う機関です。標準化対象とする分野は、鉱工業品、プログラムその他の電磁的記録、建築物、役務等です。日本産業標準調査会のホームページでは、JIS規格がPDF形式で閲覧可能です。
+
+経済産業省に設置されている審議会で，産業標準化法に基づいて産業標準化に関する調査・審議を行っており，JISの制定，改正などに関する審議を行っている。
+正しい。日本産業標準調査会は、産業標準化法に基づいてJIS規格の制定等を行う機関です。
+
+電気・電子技術に関する非営利の団体であり，主な活動内容としては，学会活動，書籍の発行，IEEE規格の標準化を行っている。
+IEEE(アイ・トリプルイー)の説明です。
+
+電気機械器具・材料などの標準化に関する事項を調査審議し，JEC規格の制定及び普及の事業を行っている。
+電気規格調査会(JEC:Japanese Electrotechnical Committee)の説明です。
+
+電子情報技術産業の総合的な発展に資することを目的とした団体であり，JEITAで始まる標準規格の制定及び普及の事業を行っている。
+JEITA：電気情報技術産業協会の説明です。
+
+
+
+**平成29年秋期　問80**
+訪問販売，通信販売，電話勧誘販売などを対象に，消費者を守るためのクーリングオフなどのルールを定めている法律はどれか。
+→
+特定商取引法
+覚えてしまった。
+
+一番迷ったのは商法だけど、通信販売系は単純な商法ではないんだとか。
+他2つは論外なので、どうでもいい。
+
+→
+特定商取引法(特定商取引に関する法律)は、訪問販売や通信販売などのトラブルが生じやすい取引において、購入者が受ける被害を防止するために事業者が守るべき義務を定めた法律です。
+
+対象となる取引には以下のように規制・ルールが定められており、違反した場合には行政処分や罰則の対象となります。
+・氏名等の明示の義務づけ
+・不当な勧誘行為の禁止
+・虚偽・誇大な広告の禁止
+・クーリング・オフ制度の適用
+したがって「ウ」が正解です。
+
+商法
+商法は、営利を目的とした活動について規定した法律です。
+
+電子消費者契約法
+電子消費者契約法は、電子商取引のうちBtoCについて取引成立時点を定め、操作ミスなどによって生じる意図しない電子契約から消費者を救済する目的で制定された法律です。
+
+特定商取引法
+正しい。
+
+不正競争防止法
+不正競争防止法は、営業秘密侵害や原産地偽装、コピー商品の販売などの不正競争を防止する目的で制定された法律です。
+※特定商取引法の対象となる取引類型は、訪問販売、通信販売、電話勧誘販売、連鎖販売取引、特定継続的役務提供、業務提供誘引販売取引、訪問購入の7つです。
+
+
+
+**平成30年春期　問40**
+SPF(Sender Policy Framework)の仕組みはどれか。
+→
+メールで送り相手が誰だかわかるようにした仕組みだった気がする。
+送信者のドメインから送信元のSPF用のDNSと照合するんだっけか？
+
+まぁ、大体この認識であってそう。
+正確には、相手のドメインからではなく、相手のドメインが詐称されていないか送信元IPアドレスから調べる仕組みだった。
+んー。いや微妙に違うな。
+えーと。受信側ドメインのDNSサーバーにSPFレコードを要求して、そこに登録されているIPアドレスと来たメールの送信元IPアドレスが同じならOKとみなすって感じか。
+間違っても、デジタル証明書は関係ないので注意したいところだ。
+
+→
+SPF(Sender Policy Framework)は、SMTP接続してきたメールサーバのIPアドレスをもとに、正規のサーバから送られた電子メールかどうかを検証する技術です。受信メールサーバ側にて電子メールの送信元ドメインが詐称されていないかを検査できます。
+
+SPFでは以下の手順で送信元IPアドレスの検証を行います。
+・送信側は、送信側ドメインのDNSサーバのSPFレコード(又はTXTレコード)に正当なメールサーバのIPアドレスやホスト名を登録し、公開しておく。
+・送信側から受信側へ、SMTPメールが送信される。
+・受信側メールサーバは、受信側ドメインのDNSサーバを通じて、MAIL FROMコマンドに記載された送信者メールアドレスのドメインを管理するDNSサーバに問い合わせ、SPF情報を取得する。
+・SPF情報との照合でSMTP接続してきたメールサーバのIPアドレスの確認に成功すれば、正当なドメインから送信されたと判断する。
+
+電子メールを受信するサーバが，電子メールに付与されているディジタル署名を使って，送信元ドメインの詐称がないことを確認する。
+SPFではディジタル署名を使用しません。記述はDKIM(DomainKeys Identified Mail)の仕組みです。
+
+電子メールを受信するサーバが，電子メールの送信元のドメイン情報と，電子メールを送信したサーバのIPアドレスから，ドメインの詐称がないことを確認する。
+正しい。SPFの仕組みです。
+
+電子メールを送信するサーバが，送信する電子メールの送信者の上司からの承認が得られるまで，一時的に電子メールの送信を保留する。
+メールの誤送信を防止するのための仕組みです。
+
+電子メールを送信するサーバが，電子メールの宛先のドメインや送信者のメールアドレスを問わず，全ての電子メールをアーカイブする。
+メールアーカイブシステムの仕組みです。
+
+
+
+**令和元年秋期　問78**
+売上高が100百万円のとき，変動費が60百万円，固定費が30百万円掛かる。変動費率，固定費は変わらないものとして，目標利益18百万円を達成するのに必要な売上高は何百万円か。
+→
+なんか、残りの問題って間違えて後ろに回った問題しか残っていないのでは？
+まぁ、最近復習したので余裕ですね。
+
+とりあえず、変動比率出します。
+100に対して60万なので0.6です。
+限界比率出します。1-0.6なので0.4です。
+目標利益って固定費と同じ扱いなので、(30 + 18)/0.4 = 120です。
+どうしてそうなのか、忘れたら「とにかく.md」でこれでもかとまとめたのでそっちを見て下しあ。
+
+→
+売上高と固定費、変動費および利益の間には次の関係があります。
+
+　利益＝売上高－変動費－固定費
+
+このうち、変動費は売上高に比例して増減する費用であるため、売上高に対する変動費の割合(変動費率)を用いて「売上高×変動費率」と表すことができます。
+
+本問では、固定費が30百万円、変動費率が「60÷100＝0.6」ですので、18百万円の利益を上げるための売上高 n は、上記の式に各値を代入して以下のように算出できます。
+
+　18＝n－(n×0.6)－30
+　18＝n－0.6n－30
+　0.4n＝48
+　n＝120
+
+したがって正解は「120百万円」です。
+
+
+
+**平成30年秋期　問56**
+システム障害が発生したときにシステムを初期状態に戻して再開する方法であり，更新前コピー又は更新後コピーの前処理を伴わないシステム開始のことであって，初期プログラムロードとも呼ばれるものはどれか。
+
+→
+基本的に電源の起動から開始するタイプはコールドに分類される。
+
+ウォームスタート
+ウォームスタートは、システム障害が発生したときに、システムの電源をOFFにせずに、そのままの状態でプログラムを再起動して処理を再開する方法です。
+
+コールドスタート
+正しい。コールドスタートは、システム障害が発生したときに、システムの電源を入れ直し、システムを初期状態に戻してからプログラムを起動して処理を再開する方法です。
+設問では「システムを初期状態に戻して」とあるのでコールドスタートに関する記述と判断できます。
+
+
+
+**平成29年秋期　問28**
+UMLを用いて表した図のデータモデルの解釈のうち，適切なものはどれか。
+→
+部門には複数の社員が所属している。
+社員はどこか1つの部門に所属している。
+部門は事業部、○○部など複数の部門の集約である。
+事業部は部門の一部であり、部門を管理する部門である。
+
+→
+事業部以外の部門が，部門を管理できる。
+部門クラスとの間に"管理する"の関連名が付いているのは事業部→部門のみなので、事業部のみが部門を管理できます。
+
+社員は事業部に所属できる。
+正しい。事業部クラスと部門クラスは汎化－特化関係にあり、事業部クラスは部門クラスを特化させた存在です。事業部は部門の一種であるため、親クラスである部門に社員が所属できるならば、子クラスの事業部にも社員が所属できます。
+
+所属する社員がいない部門が存在する。
+部門から見た社員の多重度は1以上です。すなわち社員が所属しない部門は存在しません。
+
+部門は，いずれかの事業部が管理している。
+部門から見た事業部の多重度は0または1です。すなわち事業部に管理されていない部門も存在し得ます。
+
+
+
+**令和元年秋期　問76**
+製品X及びYを生産するために2種類の原料A，Bが必要である。製品1個の生産に必要となる原料の量と調達可能量は表に示すとおりである。製品XとYの1個当たりの販売利益が，それぞれ100円，150円であるとき，最大利益は何円か。
+→
+線形計画法は明日やろう。
