--- a/BasicInformation/午後/令和元年秋期.md
+++ b/BasicInformation/午後/令和元年秋期.md
@@ -229,3 +229,26 @@ NAT64はIPv6とIPv4をつなげるための中間機器。
 あれの簡単バージョンだ。  
 今回の問題はテストの合格範囲の問題だったので、もろ応用でやったときのあれと被ってる。  
 あれで点数がある程度撮れていれば、条件分岐や境界値の判定くらいどおってことはない。  
+
+---
+
+## Java 2回目
+
+15分 【成績】全6問中 6問 回答/6問 正解　正解率:100.0%  
+
+不安になって2週目をやった結果である。  
+明らかに解けるようになっているのでうれしい限りである。  
+
+元年は一番最初にやったので何分で解けて、何問正解だったのかの情報がないけれど、確実に30分はかかったし、何問か間違えたのは確実だ。  
+それから比べて見ればかなりの進歩と言えるのでは無かろうか。  
+というか、元年から非同期だとかシングルトンだとか、拡張for文とか、色々な要素が普通に出題されていたのね。  
+こんなに難しいものが出ているとは思わなんだ。  
+しかし、全部わかったので問題はなさそう。  
+少し安心した。  
+
+一回目はとにかくプログラムの全容を把握しようと思って、上から下まで頑張って読んでたけど、ばかだなーって思うね。  
+問題文を読んでいれば、どうすれば解けるかの塩梅くらいはわかってくる。  
+そういう意味で過去問は絶対に解かねばならんのだ。  
+2回目をやって思ったが、やっぱり普通に忘れてる。  
+なんとなくこんな問題だった気がするけどって感じになってた。  
+2週目も普通に意味はありそうだ。  
