--- a/BasicInformation/午後/令和元年秋期.md
+++ b/BasicInformation/午後/令和元年秋期.md
@@ -252,3 +252,15 @@ NAT64はIPv6とIPv4をつなげるための中間機器。
 2回目をやって思ったが、やっぱり普通に忘れてる。  
 なんとなくこんな問題だった気がするけどって感じになってた。  
 2週目も普通に意味はありそうだ。  
+
+## アルゴリズム2回目
+
+30分きっかり 【成績】全9問中 9問 回答/9問 正解　正解率:100.0%  
+
+うーん。だいぶわかるようになったぞ。  
+ちょっと自信がついてきた。  
+何回も問題を解いていると、読み方がわかってくる。  
+最初は手も足も出なかったけど、この調子ならいけそうだ。  
+ちょっと前回の知識もある状態で解いたのでアドバンテージはあるけど、それでも「あぁ、そういうことね」ってのは理解出来た。  
+最初の時と比べながら理解の違いを確認出来たのは大きい。  
+これなら令和3年の問題に手を付けてもいいだろう。  
