--- a/English/その他英単語.md
+++ b/English/その他英単語.md
@@ -1,5 +1,11 @@
 # その他英単語
 
+tight
+［名・形動］
+１ きついこと。かたくしっかりしていること。ぴったりと密着していること。また、そのさま。「タイトな結び目」「タイトなスーツ」
+２ 商品の需要供給の関係が逼迫(ひっぱく)していること。品薄なこと。また、そのさま。「需給がタイトに推移する」
+３ 「タイトスカート」の略。
+
 ## 趣味
 
 ・QED : Quod Erat Demonstrandum : かく示された
