--- a/BasicInformation/とにかく.md
+++ b/BasicInformation/とにかく.md
@@ -891,11 +891,74 @@ Y = 20
 
 ---
 
+## LRU
+
+なんか親戚が3つ位あるのは知ってるんですが、それぞれが何っていうのは割とあいまいなんですよね。  
+2021/10/18 Monにようやくまとめる余裕を取ったので、一気にまとめます。  
+
+[基本情報でわかる FIFO LFU LRU 「略語の意味がわかればわかる」](https://www.seplus.jp/dokushuzemi/fe/fenavi/mastering_tech/fifo_lfu_lru/)  
+
+まず、これらアルゴリズムは仮想メモリのページングの追い出しの方式です。  
+応用も調べて見ましたが、基本的に3つだけ見たいです。  
+LRUもあいまいですが、Frequencyなるものもあいまいです。こいつは一番存在感がない気がしますね。  
+まぁ、直近でよく使うものほど残しておくといい感じになる法則があるので、主流はLRUみたいよ。
+
+FIFO (First In First Out)  
+「最初にページインしたページ」  
+→もといページインしてからの時間が最も長いページを置換え対象とするアルゴリズム  
+
+LFU (Least Frequency Used)  
+「利用された回数が最も少ないページ」  
+→わかってしまうとこれが一番わかりやすかった。  
+直訳すると「最もそうでない（ Least は、 Little の最上級です）、頻繁に、使われる」です。これは、「最も頻繁でない」が「最も回数が少ない」と同じなので、「利用された回数が最も少ないページ」に該当します。
+
+LRU (Least Recentry Used)  
+「最後に利用してから最も時間が経過しているページ」  
+→これは表現がダメ。最も直近で使っていないものにすべき。最も時間が経過したということは最も古くからあるということなので、これはどちらかというとFIFOになる。  
+直訳すると「最もそうでない、最近、使われる」です。これは、「最も、最近ではない」が、
+
+例:  
+A B B C A  
+
+ページングアルゴリズムに FIFO を採用した場合  
+A → B → B → C → A で最初にページインしたページ×「最も長く存在するページ」は A なので、 A を仮想メモリに退避させます。  
+
+ページングアルゴリズムに LFU を採用した場合  
+A → B → B → C → A において、 A は 2 回、 B は 2 回、 C は 1 回使われていて、利用された回数が最も少ないページは C なので、 C を仮想メモリに退避させます。  
+
+ページングアルゴリズムに LRU を採用した場合  
+A → B → B → C → A で最後に利用してから最も時間が経過しているページは B なので、 B を仮想メモリに退避させます。  
+直近でAを使用したので、更新された。そうすると直近で最も使われていないのはBになるのでBが追い出されるというわけ。  
+
+**平成29年春期　問19**
+仮想記憶方式のコンピュータにおいて，実記憶に割り当てられるページ数は3とし，追い出すページを選ぶアルゴリズムは，FIFOとLRUの二つ考える。あるタスクのページアクセス順序が
+1, 3, 2, 1, 4, 5, 2, 3, 4, 5
+
+FIFO
+1  1  1  1+ 4F 4  4  4  4+ 4
+   3  3  3  3  5F 5  5  5  5+
+      2  2  2  2  2+ 3F 3  3
 
 LRU
+1  1  1  1+ 1  1  2F 2  2  5F
+   3  3  3  4F 4  4  3F 3  3
+      2  2  2  5F 5  5  4F 4
+
+額面通りに受け止めてもしっくり来なかったが、追い出しに置けるFIFOはページインしてからの時間が最も長いページが対象だとは・・。  
+FIFOと言えば、上から入って下から抜けるアレだ。そのイメージでいくと、1が来た地点で1が抜けるのだが、そうではない。  
+同じものがあった場合は変化しない。違う数字が来た場合に、抜けるイメージか。そのルールさえ覚えれば、FIFOも大丈夫だ。  
+というか、これ当たり前だよな。  
+同じ数字が来たらというよりも、既にある数字だから置き換えの必要がないだけで、一番最初にIn下のが1だから次に違う数字が来た時に置き換え対象になったというだけだ。  
+
+LRUは+のポジションで存在の更新がかかるので直近で使われたことになる。  
+すると、最も最近使われていないものは自動的に最も古くからあるものになる。  
+まぁ、言葉でいうより見たほうが早いだろう。  
+あーあれだ、「最後に利用してから最も時間が経過」しているが正解だな。
+
+取り合えず、最も古くから、最も回数が少ない、最も直近で使っていない→最後に利用してから最も時間が経過の3つを覚えたのでおｋ。  
+
+---
 
 リエントラント
 
 ACID特性
-
-
