--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -292,6 +292,13 @@ Singletonパターンが適したクラス例
 
 ---
 
+## C# ToString()
+
+SettlementAmount.ToString("N0") → SettlementAmount:N0
+に省略できるらしい。便利。
+
+---
+
 ## 雑記
 
 ・俺が仕様書メモとしてまとめてる内容は全て開発フォルダの仕様書フォルダに乗っけておけばいいのでは？
@@ -303,6 +310,8 @@ Singletonパターンが適したクラス例
 
 ・ヒートテックがゆるゆるになってきた。そろそろ新しい奴買ったほうがいいだろうか。割と真剣に考えよう。
 　ついでだからパンツも新しくしてもよくないだろうか。
+・サーキュレーター？
+・耳当て？
 
 ・ネットワーク
 ・C# 配列
@@ -324,3 +333,10 @@ UTF-8,UNICODE,ShiftJis
 
 
 
+
+・耳鳴りがやばい。
+・考えているようで考えていないモードに突入した
+・頭の中が暴力的な発想でいっぱいになっている。
+・予想通り3日目は疲労困憊、睡眠不足でグダグダの模様。
+・久しぶりに部長に話しかけられたが、申し訳なく感じる。急がないとなぁ。
+・口の中が腫れている。口内炎一歩手前。睡眠不足と疲労とストレスが原因だと思われる。
